fix codeblock scrollbar

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -99,8 +99,7 @@
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
-    /* display: none; */
-    background-color: #1e1e1e;
+    display: none;
   }
 
   /* Hide scrollbar for IE, Edge and Firefox */
